fixed alignment of twitter buttons

--- a/demo/style.less
+++ b/demo/style.less
@@ -204,3 +204,7 @@ h4 {
 
 	.border-box();
 }
+
+.twitter-share-button, .twitter-follow-button {
+	vertical-align:middle;
+}
